# freecodecamp-os

./: .gitignore  AGENTS.md  Cargo.toml  README.md  book.toml  freecodecamp.conf.json  package-lock.json  package.json
.devcontainer/: devcontainer.json
.ona/: automations.yaml
app/: index.html  package-lock.json  package.json
app/src/: app.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
cli/: Cargo.toml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: app.tsx  index.css  main.tsx  types.ts
client/src/components/: block.tsx  controls.tsx  description.tsx  header.tsx  heading.tsx  hints.tsx  selection.tsx
client/src/templates/: landing.tsx  project.css  project.tsx
client/src/types/: index.ts
client/src/utils/: fetch.ts  index.ts
config/: Cargo.toml
config/src/: lib.rs
config/tests/: parse.rs
docker/: Dockerfile.base
docs/src/: roadmap.md
example/: freecodecamp.conf.json  state.json
example/curriculum/: project-1.md
parser/: Cargo.toml
parser/src/: convert.rs  lib.rs  node_ext.rs
parser/tests/: markdown.rs  project-1.md
runner/: Cargo.toml
runner/scripts/node/: index.js  index.ts  package.json  test-worker.js
runner/src/: cli.rs  error.rs  lib.rs  main.rs  manifest.rs  runner.rs
runner/src/runners/: mod.rs  node.rs  runner.rs  rust.rs
server/: Cargo.toml
server/src/: main.rs  state.rs  utils.rs  ws.rs
server/src/routes/: mod.rs
server/src/websocket/: events.rs
vite-c/: vite.config.ts
vite-c/src/: app.tsx  main.tsx  routes.tsx  types.ts
vite-c/src/components/: block.tsx  console.tsx  header.tsx  language-list.tsx  selection.tsx  test.tsx
vite-c/src/templates/: landing.tsx  project.tsx
vite-c/src/utils/: index.ts
