[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
itertools = "0.14.0"
markdown = { git = "https://github.com/wooorm/markdown-rs.git" }
mdast_util_to_markdown = { git = "https://github.com/wooorm/markdown-rs.git" }
serde = "1.0.217"
serde_json = "1.0.138"
regex = "1.11.1"
