[package]
authors = ["Shaun Hamilton"]
edition = "2021"
name = "runner"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
config = { path = "../config" }
serde_json = "1.0.138"
tempfile = "3.16.0"
tracing = "0.1.44"
