[package]
name = "freecodecamp-os"
version = "4.0.0"
edition = "2021"
authors = ["Shaun Hamilton"]

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
config = { path = "../config" }
runner = { path = "../runner" }
