[package]
name = "freecodecamp-os"
version = "0.0.1"
description = "freeCodeCamp local testing server"
authors = ["Shaun Hamilton"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.5"
